<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="162dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lableX" />

            <TextView
                android:id="@+id/x_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zeros" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lableY" />

            <TextView
                android:id="@+id/y_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zeros" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lableZ" />

            <TextView
                android:id="@+id/z_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zeros" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/sensorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="15dp"
        android:onClick="goToSensors"
        android:text="@string/ShowSensors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_widget"
        android:requiresFadingEdge="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sensorsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <View
            android:id="@+id/demonstrationObject"
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/ic_triangle_right"
            android:backgroundTint="@color/triangleColor"
            android:minWidth="1dp"
            android:padding="10dp"
            android:paddingVertical="10dp"
            android:rotation="-90" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>